# wuwa-tracker

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Makefile  README.md  go.mod  go.sum  release.toml  report.html
.agent/rules/: build-guide.md  codebase.md
.agent/workflows/: commit.md  docs.md
.agents/rules/: codebase.md
.agents/workflows/: commit.md
.github/workflows/: go-test.yml  release.yml  rust-test.yml  test.yml
cmd/: main.go
cmd/backup/: backup.go
cmd/cli/: flags.go  main.go
cmd/cli/db/: db.go
cmd/cli/report/: report.go
cmd/cli/scan/: scan.go
cmd/db/: db.go
cmd/merge/: merge.go
cmd/report/: report.go
cmd/scan/: scan.go
cmd/serve/: serve.go
cmd/server/: main.go
config/: config.go  config.json  config_test.go  embed.go
crates/wuwa-tracker-app/: Cargo.toml  build.rs  tauri.conf.json
crates/wuwa-tracker-app/src/: api.rs  cli.rs  http.rs  logging.rs  main.rs  service.rs  webui_assets.rs
crates/wuwa-tracker-core/: Cargo.toml
crates/wuwa-tracker-core/src/: config.rs  error.rs  lib.rs  logger.rs  merge.rs  reporter.rs  scanner.rs  service.rs  stats.rs  store.rs  tracker.rs  translations.rs  types.rs
crates/wuwa-tracker-core/templates/: report.html
crates/wuwa-tracker-types/: Cargo.toml
crates/wuwa-tracker-types/src/: lib.rs
crates/wuwa-tracker-webui/: Cargo.toml  index.html  style.css
crates/wuwa-tracker-webui/src/: api.rs  app.rs  i18n.rs  main.rs  types.rs
internal/db/: badger.go  badger_benchmark_test.go  badger_test.go  disk_usage_unix.go  disk_usage_windows.go  merge.go  merge_benchmark_test.go  merge_test.go
internal/handler/: errors.go  handler.go
internal/report/: csv.go
internal/reporter/: csv.go  exporter.go  exporter_test.go  html.go  html_test.go  json.go
internal/scanner/: locale.go  locale_test.go  locale_unix.go  locale_windows.go  paths.go  paths_test.go  scanner.go  scanner_benchmark_test.go  scanner_test.go
internal/server/: runtime.go
internal/server/handlers/: handlers.go
internal/server/models/: models.go
internal/service/: scanner_test.go  service.go  service_test.go
internal/tracker/: api.go  api_test.go  locale.go  locales.go  stats.go  stats_benchmark_test.go  stats_test.go  types.go
internal/types/: types.go
locales/: ko.json  locale.go  locale_test.go
locales/ui/: en.json  ko.json
scripts/: import.ps1  import.sh
templates/: template.go
templates/html/: report.tmpl
tools/reporter/: main.go
webui/: README.md  embed.go  index.html  package.json  tsconfig.app.json  vite.config.ts
webui/src/: App.svelte  app.css
webui/src/lib/: i18n.ts  types.ts
webui/src/lib/api/: config.ts  index.ts
webui/src/lib/components/: ControlPanel.svelte  FiveStarHistory.svelte  FullHistory.svelte  GachaReport.svelte  Header.svelte  UploadModal.svelte
webui/src/lib/locales/: en.json  ko.json
webui/src/lib/stores/: tracker.ts
