[workspace]
members = [
    "crates/wuwa-tracker-app",
    "crates/wuwa-tracker-core",
]
resolver = "2"

[workspace.package]
version = "1.0.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/meteormin/wuwa-tracker"

[workspace.dependencies]
anyhow = "1"
askama = "0.16"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
rust-embed = { version = "8", features = ["debug-embed"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
unicode-width = "0.2"
url = "2"
