[package]
name = "wuwa-tracker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tokio.workspace = true
tower-http.workspace = true
wuwa-tracker-core = { path = "../wuwa-tracker-core" }

[[bin]]
name = "wuwa-tracker"
path = "src/main.rs"
