[package]
name = "wuwa-tracker-webui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gloo-net = "0.6"
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr"] }
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "Event",
    "File",
    "FileList",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlInputElement",
    "Location",
    "Navigator",
    "Storage",
    "Url",
    "Window",
]
